@@ -1,3 +1,12 @@
+2013-05-16  Christopher Faylor  <me.cygwin2013@cgf.cx>
+
+	* sigproc.cc (sig_hold): Delete.
+	(sigheld): Delete.
+	(sig_send): Eliminate special-case __SIGHOLD handling.
+	(wait_sig): Just flag when signals are on hold and add them to the
+	queue rather than stalling the wait_sig loop.  Clear the flag when
+	__SIGNOHOLD is specified.
+
 2013-05-14  Corinna Vinschen  <corinna@vinschen.de>
 
 	* Makefile.in (devices_CFLAGS): Drop -Os.
